Fix header and footer on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,11 @@ header h1 {
 	font-size: 30px;
 }
 
+header, footer {
+	margin-left: 0;
+	margin-right: 0;
+}
+
 #nav-menu .dropdown .dropdown-btn {
 	display: none;
 	width:  35px;
@@ -186,7 +191,7 @@ footer {
 	justify-content: center;
 	align-items: center;
 	background-color: var(--color1);
-	margin: 10px auto 0 auto;
+	margin: 10px 0 0 0;
 	width: 100%;
 }
 
